updated logger format

--- a/AgentRiskScore/NLog.config
+++ b/AgentRiskScore/NLog.config
@@ -7,34 +7,26 @@
 				<attribute name="Time" layout="${longdate}" />
 				<attribute name="Level" layout="${level:upperCase=true}"/>
 				<attribute name="Message" layout="${message}" />
-				<attribute name="Exception" layout="${exception:format=@}" />
+				<attribute name="Exception" layout="${exception:format=toString}" />
 			</layout>
 		</target>
 		<target xsi:type="ColoredConsole"
-          name="String"
-          encoding="Encoding"
-          layout="Layout"
-          header="Layout"
-          footer="Layout"
-          useDefaultRowHighlightingRules="Boolean"
-          errorStream="Boolean"
-          enableAnsiOutput="Boolean"
-          detectConsoleAvailable="Boolean"
-          detectOutputRedirected="Boolean">
-			<highlight-row condition="Condition" backgroundColor="Enum" foregroundColor="Enum"/>
-			<!-- repeated -->
-			<highlight-word text="String" condition="Condition" backgroundColor="Enum" foregroundColor="Enum"
-							ignoreCase="Boolean" regex="String" wholeWords="Boolean" compileRegex="Boolean"/>
-			<!-- repeated -->
+          name="WriteToConsole"
+          encoding="utf-8"
+          useDefaultRowHighlightingRules="True">
+			<layout xsi:type="JsonLayout" includeEventProperties="true" excludeProperties="Comma-separated list (string)">
+				<attribute name="Time" layout="${longdate}" />
+				<attribute name="Level" layout="${level:upperCase=true}"/>
+				<attribute name="Message" layout="${message}" />
+				<attribute name="Exception" layout="${exception:format=toString}" />
+			</layout>
 		</target>
-		<target xsi:type="Console" name="lifetimeConsole" layout="${MicrosoftConsoleLayout}" />
 	</targets>
 	<extensions>
 		<add assembly="NLog.Web.AspNetCore"/>
 		<add assembly="NLog.Extensions.Logging"/>
 	</extensions>
 	<rules>
-		<logger name="Logger" minlevel="Trace" writeTo="jsonFile" />
-		<logger name="ConsoleLogger" minlevel="Trace" writeTo="String" />
+		<logger name="Logger" minlevel="Trace" writeTo="jsonFile,WriteToConsole" />
 	</rules>
 </nlog>
