added custom exception

--- a/AgentRiskScore/NLog.config
+++ b/AgentRiskScore/NLog.config
@@ -18,7 +18,7 @@
 				<attribute name="Time" layout="${longdate}" />
 				<attribute name="Level" layout="${level:upperCase=true}"/>
 				<attribute name="Message" layout="${message}" />
-				<attribute name="Exception" layout="${exception:format=toString}" />
+				<attribute name="Exception" layout="${exception:format=@ }" />
 			</layout>
 		</target>
 	</targets>
