Completed TotalSumRiskFactor with filtering

--- a/AgentRiskScore/NLog.config
+++ b/AgentRiskScore/NLog.config
@@ -13,7 +13,7 @@
 		<target xsi:type="ColoredConsole"
           name="WriteToConsole"
           encoding="utf-8"
-          useDefaultRowHighlightingRules="True">
+          useDefaultRowHighlightingRules="true">
 			<layout xsi:type="JsonLayout" includeEventProperties="true" excludeProperties="Comma-separated list (string)">
 				<attribute name="Time" layout="${longdate}" />
 				<attribute name="Level" layout="${level:upperCase=true}"/>
@@ -26,7 +26,17 @@
 		<add assembly="NLog.Web.AspNetCore"/>
 		<add assembly="NLog.Extensions.Logging"/>
 	</extensions>
+	<!--LOG LEVEL-->
+	<!--
+	Trace: Most verbose level. Used for development.
+	Debug: Debug application behaviour from internal events of interest.
+	Info: Information that highlights progress.
+	Warn: Warnings about validation issues or temporary failures that can be recovered.
+	Error: Errors where functionality has failed or exception is caught.
+	Fatal: Most critical. Application about to abort.
+	-->
 	<rules>
 		<logger name="Logger" minlevel="Trace" writeTo="jsonFile,WriteToConsole" />
 	</rules>
+	
 </nlog>
