--- a/AgentRiskScore/AgentRiskScore.csproj
+++ b/AgentRiskScore/AgentRiskScore.csproj
@@ -29,6 +29,7 @@
     <PackageReference Include="NLog.Schema" Version="5.0.4" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="5.1.4" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.1" />
+    <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="6.16.0" />
   </ItemGroup>
 
   <ItemGroup>
